<resources>
    <string name="app_name">牛剑学术</string>
    <string name="register_account">注册账号</string>
    <string name="account_login">账号登录</string>
    <string name="im_student">我是学生</string>
    <string name="im_teacher">我是老师</string>
    <string name="account_edittext_hint">请输入手机号作为登录账号</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register_password_tip">8~20位字母、数字或者特殊字符</string>
    <string name="forget_password_tip">请输入密码</string>
    <string name="register_password_tip2">密码必须是8~20位字母、数字或者特殊字符</string>
    <string name="second_input_password_tip">再次输入密码</string>
    <string name="accept_account_privacy">接受条款及细则</string>
    <string name="next_step">下一步</string>
    <string name="two_input_no_sample">两次输入的密码不一致</string>
    <string name="account_no_null">账号不能为空</string>
    <string name="verify_no_null">请先获取验证码</string>
    <string name="register_success_tip">注册成功，请继续完善资料！</string>
    <string name="not_valid_get_verification_code_time">短信发送过于频繁，请稍后再试</string>
    <string name="current_phone_get_verification_code_more_than_limit">当前手机号码发送短信数量超过限额</string>
    <string name="phone_number_format_error_message">你输入的是一个无效的手机号码</string>
    <string name="sms_send_failed">发送短信失败，请稍后再试</string>
    <string name="sms_send_success">发送短信成功</string>
    <string name="request_result_failed">请求失败</string>
    <string name="request_result_success">请求成功</string>
    <string name="no_permission">禁止访问</string>
    <string name="ip_no_permission">IP禁止访问</string>
    <string name="ip_refuse">IP地址拒绝</string>
    <string name="refuse_visite">禁止网站访问</string>
    <string name="resource_no_exist">你访问的资源不存在</string>
    <string name="database_timeout">数据库超时</string>
    <string name="server_exception">服务端程序异常</string>
    <string name="password_error_more_than">密码输入次数过多，请5分钟之后再试</string>
    <string name="password_error_more_than_today">当天密码输入次数过多，请明天再试</string>
    <string name="sms_code_error_more_than">验证码确认3次，请第二天再试</string>
    <string name="sms_send_more_than">当前IP 当天发送短信超过5次，请第二天再试</string>
    <string name="please_input_correct_phone">请输入正确的手机号码</string>
    <string name="please_input_correct_email">请输入正确的邮箱地址</string>
    <string name="please_input_pwd">8~20位字母、数字或特殊符号</string>
    <string name="authorize_login">第三方登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="weixin_login">微信登录</string>
    <string name="twitter_login">推特登录</string>
    <string name="current_network_unavailable">当前网络不可用</string>
    <string name="account_pwd_null">请输入登录账号</string>
    <string name="account_email_null">请输入邮箱地址</string>
    <string name="login_pwd_null">请输入密码（8~20位字母、数字或特殊符号）</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="geting_sms_code">正在获取短信验证码&#8230;</string>
    <string name="registing">正在注册&#8230;</string>
    <string name="appointment_class">约课</string>
    <string name="search">搜索</string>
    <string name="student_ratings">学生评分</string>
    <string name="graduated_school_format">大学：%s</string>
    <string name="degree_format">学院：%s</string>
    <string name="class_format">科目：%s</string>
    <string name="class_age_format">%d年教龄</string>
    <string name="high_school">高中</string>
    <string name="bachelor">学士</string>
    <string name="master_degree">硕士</string>
    <string name="phd">博士</string>
    <string name="postdoctor">博士后</string>
    <string name="phd_teacher">博导</string>
    <string name="please_input_key">请输入关键字</string>
    <string name="search_history">搜索历史</string>
    <string name="search_discover">搜索发现</string>
    <string name="class_schedule">课程表</string>
    <string name="course_appointment">课程预约</string>
    <string name="money">金额</string>
    <string name="order">下单</string>
    <string name="immediately_order">立刻下单</string>
    <string name="order_confirm">订单确认</string>
    <string name="courseware_information">课堂资料</string>
    <string name="upload_docs">上传资料</string>
    <string name="upload_time">上传时间：</string>
    <string name="uploaded_by">上传人：</string>
    <string name="download_open">下载并打开</string>
    <string name="course_evaluation">课堂评价</string>
    <string name="ratingbar_evaluation">星级评价</string>
    <string name="achieving_learning_objectives">达成学习目标</string>
    <string name="academic_expertise">学术专长</string>
    <string name="clarity_of_teaching">教学清晰度</string>
    <string name="approachability_rapport">平易近人和相处融洽</string>
    <string name="inspiration_and_Motivation">灵感和动力</string>
    <string name="course_evaluation_message">我的课堂你还满意吗？请评价</string>
    <string name="courseware">课件</string>
    <string name="evaluation">评价</string>
    <string name="contact">联系</string>
    <string name="finish_evaluation">完成评价</string>
    <string name="deleting">正在删除</string>
    <string name="srl_header_pulling">下拉可以刷新</string>
    <string name="srl_header_refreshing">正在刷新…</string>
    <string name="srl_header_loading">正在加载…</string>
    <string name="srl_header_release">释放立即刷新</string>
    <string name="srl_header_finish">刷新完成</string>
    <string name="srl_header_failed">刷新失败</string>
    <string name="srl_header_update">上次更新 M-d HH:mm</string>
    <string name="srl_header_secondary">释放进入二楼</string>
    <string name="srl_footer_pulling">上拉加载更多</string>
    <string name="srl_footer_release">释放立即加载</string>
    <string name="srl_footer_loading">正在加载…</string>
    <string name="srl_footer_refreshing">正在刷新…</string>
    <string name="srl_footer_finish">加载完成</string>
    <string name="srl_footer_failed">加载失败</string>
    <string name="srl_footer_nothing">没有更多数据了</string>
    <string name="srl_component_falsify" formatted="false">%s 虚假区域\n代表运行时拖动的高度【%.1fdp】 \n而不会显示任何东西</string>
    <string name="fgh_mask_top_pull">Pull To Break Out!</string>
    <string name="fgh_mask_top_release">Release To Break Out!</string>
    <string name="fgh_mask_bottom">Scroll to move handle</string>
    <string name="fgh_text_game_over">Game Over</string>
    <string name="fgh_text_loading">Refreshing…</string>
    <string name="fgh_text_loading_finish">Refreshing Finished</string>
    <string name="fgh_text_loading_failed">Refreshing Failed</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="menu">菜单</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="readed">已读</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="withdrawn_msg">撤 回</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="revoke_failed">发送时间超过2分钟的消息，不能被撤回</string>
    <string name="pic_and_video">图片和视频</string>
    <string name="black_list_send_tip">消息已发送，但对方拒收</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="video_play">视频播放</string>
    <string name="video_record">视频录制</string>
    <string name="video_record_symbol">REC</string>
    <string name="video_record_begin">开始录制</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="contact_selector">联系人选择器</string>
    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="team_admin_invite">管理员邀请</string>
    <string name="team_everyone_invite">所有人邀请</string>
    <string name="team_admin_update">管理员修改</string>
    <string name="team_everyone_update">所有人修改</string>
    <string name="team_invitee_need_authen">需要验证</string>
    <string name="team_invitee_not_need_authen">不需要验证</string>
    <string name="team_notify_mute">不提醒任何消息</string>
    <string name="left_ok">好的</string>
    <string name="payment_method">支付方式</string>
    <string name="login">登录</string>
    <string name="please_input_email_login_account">请输入邮箱作为登录账号</string>
    <string name="out_line_notify">下线通知</string>
    <string name="out_line_notify_message">你的帐号在其它客户端登录，请注意帐号信息安全</string>
    <string name="yu_e_pay">余额支付</string>
    <string name="pay_pal_pay">PayPal支付</string>
    <string name="mobile_phone_login">&#160;手机号登录</string>
    <string name="email_login">&#160;邮箱登录</string>
    <string name="no_limit">不限</string>
    <string name="level">A-Level</string>
    <string name="ib">IB</string>
    <string name="forget_password">忘记密码？</string>
    <string name="lesson_cancellation">课堂取消</string>
    <string name="cancel_the_lesson">您确定要取消这节课吗？</string>
    <string name="course_confirm">确认取消</string>
    <string name="course_no">容我三思</string>
</resources>