<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/appointment_class"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_21" />

        <TextView
            android:id="@+id/search_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="@dimen/dp_2"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dp_20"
            android:text="@string/search"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dp_15"
            android:visibility="gone" />
    </RelativeLayout>

    <View style="@style/SeparationLine"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_7">

        <TextView
            android:id="@+id/no_limit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/no_limit"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/a_level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/level"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/ib_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/ib"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_14" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_5">

        <com.newtonacademic.newtontutors.widget.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f5f5f5">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none" />

        </com.newtonacademic.newtontutors.widget.smartrefresh.layout.SmartRefreshLayout>

        <com.newtonacademic.newtontutors.widget.ProgressDialog
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>


</LinearLayout>