<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/book_bg_shape"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/save_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/scheme_cancel" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/save_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/lesson_cancellation"
            android:textColor="@color/color_000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel_the_lesson"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/logout_gray_shape_10"
            android:text="@string/course_no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/logout_shape_10"
            android:text="@string/course_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>

